오늘자 마지막 과제

--- a/web003_1.html
+++ b/web003_1.html
@@ -16,7 +16,7 @@
                     margin:0 auto;
                     padding:20px; 
                     border-radius:20px;
-                    box-shadow: 0 4px 12px raba(0,0,0,0.1);
+                    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
                     text-align: center;">
             <p style="font-size:14px; color:#666; margin-bottom:10px;"><img src="./img/one.png" alt="jeongmin프로필사진"
                         style="width:90px; height:90px; border-radius:50%; border:3px solid #f86093;"/></p>
