--- a/track002_web_basic/web001.html
+++ b/track002_web_basic/web001.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>web basic001</title>
-</head>
-<body>
-   안녕 Html 
-</body>
+    <head>
+        <meta charset=""utf-8">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
+        <title>Document</title>
+    </head>
+    <body>
+        
+    </body>
 </html>
