--- a/track002_web_basic/web003_1.html
+++ b/track002_web_basic/web003_1.html
@@ -5,16 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TAG</title>
 </head>
-<body>
+<body style="margin:0; padding:30px;  
+                font-family: 'Segoe UI', sans-serif;
+                background:linear-gradient(135deg, #9af8c9, #94e0ee) no-repeat">
     <div>
-        <h1>사용자 프로필 카드 </h1>
-        <div>
-            <p><img src="./img/one.png" alt="sally프로필사진"/></p>
-            <h2>Sally An</h2>
-            <p>백엔드개발자 | Node.js & DB전문가</p>
-            <p>팔로워 : 3,200명 </p>
-            <p><a href="https://github.com/sally03915/fullstack_20250825" 
-                  title="프로필 바로가기">깃허브 보기</a></p>
+        <h1 style="text-align:center; color:#e1306c; margin-bottom:40px; ">사용자 프로필 카드 </h1>
+        <!--padding-bottom:20px; padding-top:20px; padding-left:20px; padding-right:20px;-->
+        <div style="background-color:#fff;
+                    width:250px;
+                    margin:0 auto;
+                    padding:20px; 
+                    border-radius:20px;
+                    box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+                    text-align: center;">
+            <p style="font-size:14px; color:#666; margin-bottom:10px;"><img src="./img/one.png" alt="jeongmin프로필사진"
+                        style="width:90px; height:90px; border-radius:50%; border:3px solid #f86093;"/></p>
+            <h2 style="margin-top:10px; margin-bottom:5px; font-size:18px; color:#333;">Jeong Min</h2>
+            <p style="font-size:14px; color:#666; margin-bottom:10px;">백엔드개발자 | Node.js & DB학생</p>
+            <p style="font-size:14px; color:#666; margin-bottom:10px;">팔로워 : 1,170명 </p>
+            <p style="font-size:14px; color:#666; margin-bottom:10px;">
+                <a href="https://github.com/kyoungsjjj0211/jeongmin001" 
+                  title="프로필 바로가기"
+                  style="margin-top:5px; font-size:13px;
+                   color: #e1306c; text-decoration:none;"
+                  >깃허브 보기</a></p>
         </div>
     </div>
 </body>
