--- a/track002_web_basic/web004_3_text.html
+++ b/track002_web_basic/web004_3_text.html
@@ -17,7 +17,7 @@
           /* Q5. .project1 배경 : 그라디언트 #fceabb → #f8b500 */
         .project1 {background:linear-gradient(to bottom, #fceabb, #f8b500);}
           /* Q6. .project2 배경 : 그라디언트 #d5fefd → #a1c4fd */
-        .project2 {background:linear-gradient(to bottom, #d5fefd, #a1c4fd);}
+        .project2 {background:"linear-gradient"(to bottom, #d5fefd, #a1c4fd);}
           /* Q7. .project3 배경 : 그라디언트 #fbc2eb → #a6c1ee */
         .project3 {background:linear-gradient(to bottom, #fbc2eb, #a6c1ee);}
           /* Q8. .portfolio img 너비/높이 : 90px, 원형처리, 이미지 비율 유지, 테두리 : 3px 실선 #34495e */
