--- a/track002_web_basic/web005_4_ex2_question.html
+++ b/track002_web_basic/web005_4_ex2_question.html
@@ -46,14 +46,15 @@
    - 위로 이동: 5px
    - 그림자 강조: 15px
    - 테두리 색상 변경: #00796b */
- 
+ .card::before {content:""; position:absoulute;  top:-3px; let: -3px; right:-3px; bottom:3px; border-radius:18px;
+  background:linear-gradient(135deg #00c9ff, #92fe9d); opacity:0; transition: opacity 0.3s; z-index: -1;}
 
 /* Q7: 카드에 마우스를 올렸을 때 그라디언트 테두리를 나타내려면?
    - 위치: 카드 바깥쪽 (-3px)
    - 배경: 45도 방향의 그라디언트 (#00c9ff → #92fe9d)
    - 둥근 테두리: 18px
    - 투명도: hover 시 1로 변경 */
- 
+ .card img {width: 120px; height: 80px; border-radius: 10px; object-fit: cover; border: 2px solid #00796b;}
 
 /* Q8: 카드 이미지에 크기와 스타일을 주려면?
    - 너비: 120px
@@ -61,19 +62,21 @@
    - 둥근 모서리: 10px
    - 이미지 비율 유지: object-fit: cover
    - 테두리 색상: #00796b */
- 
+ .card h2 {font-size: 18px; margin: 15px 0 10px; color: #333;}
 
 /* Q9: 카드 제목(h2)에 글자 크기와 여백, 색상을 주려면?
    - 글자 크기: 18px
    - 여백: 위 15px, 아래 10px
    - 색상: #333 (진회색) */
- 
+ .card p {font-size: 14px; color: #555; margin-bottom: 10px;}
 
 /* Q10: 카드 설명(p)에 글자 크기와 색상, 아래 여백을 주려면?
    - 글자 크기: 14px
    - 색상: #555 (중간 회색)
    - 아래 여백: 10px */
- 
+.more {
+  position: absolute; top: 10px; right: 10px; background-color: #00796b; color: #fff;
+   padding: 8px 12px; border-radius: 12px; font-size: 13px;} 
 /* Q11: 카드 오른쪽 상단에 고정된 버튼을 만들고 스타일을 주려면?
    - 위치: absolute (top:10px, right:10px)
    - 배경색: #00796b
@@ -81,7 +84,7 @@
    - 패딩: 8px 12px
    - 둥근 모서리: 12px
    - 글자 크기: 13px */
- 
+ .hover{background-color: #004d40;animation: shake 0.3s;}
 
 /* Q12: 버튼에 마우스를 올렸을 때 색상 변경과 흔들림 효과를 주려면?
    - 배경색 변경: #004d40
@@ -95,7 +98,8 @@
 /* Q14: 카드가 아래에서 위로 부드럽게 등장하도록 애니메이션을 정의하려면?
    - 시작: opacity 0, translateY(20px)
    - 종료: opacity 1, translateY(0) */
- 
+ .clear {clear: both; margin-top:50px; padding:15px; background-color:#e0f2f1;
+   border-radius:10px; text-align:center; color:#333;}
 /* Q15: float를 끊고 아래 설명 박스를 만들려면?
    - clear: both
    - 위 여백: 50px
