--- a/track002_web_basic/web005_1.html
+++ b/track002_web_basic/web005_1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> web005_1.html </title>
     <style>
+        .box {width: 100px; height: 100px; padding: 10px; border: 2px solid black; box-sizing: border-box;}
         /* Q1. 전체여백빼기 
             box-sizing : border-box; 박수크기 계산을 통일 , 
             width와 hegiht에 padding과 border 까지 포함해서 계산
@@ -44,6 +45,11 @@
         .p2 .me {position: ifixed; bottom:100px; right:0;/* 브라우저 기준 */
         background-color: aquamarine;}
             
+
+        /* Q8. display */
+        .d1 li{display:inline;}
+        .d2 li{display:inline-block;
+        width :100px; padding:10px; background-color:gold; text-align:center;}
     </style>
 </head>
 <body>
@@ -69,6 +75,21 @@
         <div class="container p2">
         <h3>3. 배치 (2) position - fixed</h3>
         <p class="me" > where i am?</p>
+    </div>
+
+    <div class="container">
+    <h3>4. display 요소속성변경</h3>
+    <ul>
+        <li>APPLE</li><li>BANNA</li><li>COCONUT</li>
+    </ul>
+    <hr/>
+    <ul class="d1">
+        <li>APPLE</li><li>BANNA</li><li>COCONUT</li>
+    </ul>
+    <hr/>
+    <ul class="d2">
+        <li>APPLE</li><li>BANNA</li><li>COCONUT</li>
+    </ul>
     </div>
 </body>
 </html>
