--- a/track002_web_basic/web005_2.html
+++ b/track002_web_basic/web005_2.html
@@ -35,7 +35,7 @@ h3{border-left:10px solid #00bfff; background-color: #1f2833; margin-bottom: 1em
 /* Q12: 너비(120px) 지정 가능한 인라인 블록 항목을 만들고 배경색(#e74c3c), 바깥 여백(5px), 패딩(1em), 텍스트 가운데 정렬, 모서리 둥글게(10px) 하려면? */
 .nebula li {display: inline-block; width: 120px; margin: 5px; background-color: #e74c3c; padding: 1em; text-align: center; border-radius: 10px;}
 /* Q13: 여백(margin:30px)과 안쪽 공간(padding:20px)이 있는 탐사 미션 박스를 만들고 배경색(#2980b9), 모서리 둥글게(10px) 하려면? */
-.mission {margin: 30px; padding: 20px; background-color: #2980b9; border-radius: 10px;}
+.container.mission {margin: 30px; padding: 20px; background-color: #2980b9; border-radius: 10px;}
 
   </style>
 </head>
