--- a/track002_web_basic/web005_4_ex2.html
+++ b/track002_web_basic/web005_4_ex2.html
@@ -182,7 +182,7 @@
     <h1>나의 포트폴리오</h1>   
 
     <div class="card">
-      <img src="./img/portfolio1.jpg" alt="프로젝트1 썸네일">
+      <img src="./img/portfolio1.jpg " alt="프로젝트1 썸네일">
       <h2>쇼핑몰 웹앱</h2>
       <p>React + Firebase 기반의 쇼핑몰 웹 애플리케이션</p>
       <p>사용 기술: React, Firebase, Styled-components</p>
@@ -190,7 +190,7 @@
     </div>
 
     <div class="card">
-      <img src="./img/portfolio2.jpg" alt="프로젝트2 썸네일">
+      <img src="./img/portfolio2.jpg.jpg" alt="프로젝트1 썸네일">
       <h2>AI 챗봇 서비스</h2>
       <p>Python 기반의 자연어 처리 챗봇 시스템</p>
       <p>사용 기술: Flask, TensorFlow, NLP</p>
