--- a/track002_web_basic/web005_4_ex2_question.html
+++ b/track002_web_basic/web005_4_ex2_question.html
@@ -125,7 +125,7 @@
     </div>
 
     <div class="card">
-      <img src="./img/portfolio2.jpg" alt="프로젝트2 썸네일">
+      <img src="./img/portfolio1.jpg" alt="프로젝트2 썸네일" 
       <h2>AI 챗봇 서비스</h2>
       <p>Python 기반의 자연어 처리 챗봇 시스템</p>
       <p>사용 기술: Flask, TensorFlow, NLP</p>
