--- a/track002_web_basic/portfolio .html
+++ b/track002_web_basic/portfolio .html
@@ -36,19 +36,16 @@
     </header> 
   <div class="list">
       <div class="one">
-        <span class="profile"><img src="./imgs/me.jpg" width="550px;" height="550px" alt=""/></span> 
-        <h3><strong>Hello! I'm Stella.</strong> <br>You can scroll down if you want to see me more!</h3>
+        <span class="profile"><img src="./img/profile.png" width="550px;" height="550px" alt=""/></span> 
+        <h3><strong>Hello! I'm Jeong Min.</strong> <br>You can scroll down if you want to see me more!</h3>
       </div>
   </div>
 
   <div class="list">
       <div class ="two">
-          <img class = "me" src ="./imgs/me2.jpg" alt="" width="450px;" height="500px">
+          <img class = "me" src ="./img/my2.jpg" alt="" width="450px;" height="500px">
           <h3 class ="intext"> <strong>What would I lose if I learn coding?<br>Absoultely nothing!</strong><br><br>
-            Hello! I'm Stella Kim. Welcome to my homepage.<br>
-            I majored in English and worked as a hotelier in Singapore. <br>
-            After I came back to Korea, I was also in the service fields. <br>
-            But I don't want to see myself in the same industry in the few years. <br>
+            Hello! I'm JeongMin Kim. Welcome to my homepage.<br>
             The reason I want to be a fullstack engineer is that <br>
             there is no limits for studying and developing myself! <br>
             Achievement is one of my motivation of my life. <br><br>
