--- a/track002_web_basic/portfolio .html
+++ b/track002_web_basic/portfolio .html
@@ -87,9 +87,9 @@
   <div class="list">
       <div class = "four">
           <img class = "contact_img" src ="./imgs/bg.jpg">
-          <a href="https://velog.io/@subtitle1" class="ct">Velog</a>
-          <a href="mailto:stella.kim.96211@gmail.com" class="ct">Gmail</a>
-          <a href="https://github.com/subtitle1" class="ct">Github</a>
+          <a href="https://naver.com" class="ct">Velog</a>
+          <a href="mailto:kyoungsjjj0513@gmail.com" class="ct">Gmail</a>
+          <a href="https://https://github.com/kyoungsjjj0211" class="ct">Github</a>
       </div>
   </div>
 <div>
