--- a/track002_web_basic/portfolio .html
+++ b/track002_web_basic/portfolio .html
@@ -1,5 +1,8 @@
+<!--https://jieun-portfolio.vercel.app/-->
+<!--https://github.com/subtitle1?tab=repositories-->
+<!--https://github.com/subtitle1/index.html?tab=readme-ov-file-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,40 +48,42 @@
       <div class ="two">
           <img class = "me" src ="./img/my2.jpg" alt="" width="450px;" height="500px">
           <h3 class ="intext"> <strong>What would I lose if I learn coding?<br>Absoultely nothing!</strong><br><br>
-            Hello! I'm JeongMin Kim. Welcome to my homepage.<br>
-            The reason I want to be a fullstack engineer is that <br>
-            there is no limits for studying and developing myself! <br>
-            Achievement is one of my motivation of my life. <br><br>
-            To be a great developer, <br>
-            achievement and developing myself constantly <br>
-            is the most important thing, I think.
-            <br><br>
-            For the future junior developer!</h3>
+            Hello! I'm Kim Jungmin. Welcome to my homepage<br>
+            The reason why I want to be a full stack engineer is <br>
+            I want to do something that runs from me, not from one part
+            Because.<br>
+            There are no limits to studying and developing myself! <br>
+            One of my motivations in life is memories. <br>
+            To be a good developer, <br>
+            Achievement and my own development constantly <br>
+            I think that's the most important thing.
+<br><br>
+          </h3>
       </div>
   </div>
   
   <div class="list">
       <div class="three">
-          <h1><br><br> 💕 💕 💕 </h1>
+          <h1><br><br>  </h1>
           <div class = "favorites">
               <div class="lists">
                   <img class = "list_img" src="./imgs/what i love/mypet.jpg" alt="">
-                  <p class = "list_text"> 반려견 두부를 포함한<br>모든 강아지! 🐶</p>
+                  <p class = "list_text"> Education<br></p>
               </div>
 
               <div class="lists">
                   <img class = "list_img" src="./imgs/what i love/coffee.jpg" alt="">
-                  <p class = "list_text"> Coffee ☕</p>
+                  <p class = "list_text"> KeyWord <br> 열정, 성실, 끈기, 차분함, 의지</p>
               </div>
 
               <div class="lists">
                   <img class = "list_img" src="./imgs/what i love/walking.jpg" alt="">
-                  <p class = "list_text"> 산책도 즐기고 🏃🏻‍♂️</p>
+                  <p class = "list_text"> SKILLS</p>
               </div>
 
               <div class="lists">
                   <img class = "list_img" src="./imgs/what i love/traveling.jpg" alt="">
-                  <p class = "list_text"> 여행도 좋아해요! 💕</p>
+                  <p class = "list_text"> 기술스택</p>
               </div>
           </div>
       </div>
@@ -87,9 +92,9 @@
   <div class="list">
       <div class = "four">
           <img class = "contact_img" src ="./imgs/bg.jpg">
-          <a href="https://naver.com" class="ct">Velog</a>
+          <a href="https://www.youtube.com/@mi_ya__01" class="ct">Youtube</a>
           <a href="mailto:kyoungsjjj0513@gmail.com" class="ct">Gmail</a>
-          <a href="https://https://github.com/kyoungsjjj0211" class="ct">Github</a>
+          <a href="https://github.com/kyoungsjjj0211" class="ct">Github</a>
       </div>
   </div>
 <div>
