--- a/track002_web_basic/portfolio .html
+++ b/track002_web_basic/portfolio .html
@@ -1,6 +1,3 @@
-<!--https://jieun-portfolio.vercel.app/-->
-<!--https://github.com/subtitle1?tab=repositories-->
-<!--https://github.com/subtitle1/index.html?tab=readme-ov-file-->
 <!DOCTYPE html>
 <html lang="ko">
 <head>
@@ -30,22 +27,22 @@
     <header id = "header"> 
         <nav class ="menu">
             <ul>
-                <li><a href = "index.html" <b>Home</b></a></li>
-                <li><a href = "about.html" <b>About</b></a></li>
-                <li><a href = "favorites.html" <b>What I love</b></a></li>
-                <li><a href = "contact.html" <b>Contact</b></a></li>
+                <li><a href = "#home"><b>Home</b></a></li>
+                <li><a href = "#about"> <b>About</b></a></li>
+                <li><a href = "#Process"> <b>Process of</b></a></li>
+                <li><a href = "#contact"> <b>Contact</b></a></li>
             </ul>
         </nav>
     </header> 
   <div class="list">
-      <div class="one">
+      <div class="one" id="home">
         <span class="profile"><img src="./img/profile.png" width="550px;" height="550px" alt=""/></span> 
         <h3><strong>Hello! I'm Jeong Min.</strong> <br>You can scroll down if you want to see me more!</h3>
       </div>
   </div>
 
   <div class="list">
-      <div class ="two">
+      <div class ="two" id="about">
           <img class = "me" src ="./img/my2.jpg" alt="" width="450px;" height="500px">
           <h3 class ="intext"> <strong>What would I lose if I learn coding?<br>Absoultely nothing!</strong><br><br>
             Hello! I'm Kim Jungmin. Welcome to my homepage<br>
@@ -63,35 +60,35 @@
   </div>
   
   <div class="list">
-      <div class="three">
+      <div class="three" id ="Process">
           <h1><br><br>  </h1>
-          <div class = "favorites">
+          <div class = "Process">
               <div class="lists">
-                  <img class = "list_img" src="./imgs/what i love/mypet.jpg" alt="">
-                  <p class = "list_text"> Education<br></p>
+                  <img class = "list_img" src="./img/1.png" alt="">
+                  <p class = "list_text"> Skill Proficiency 97%<br></p>
               </div>
 
               <div class="lists">
-                  <img class = "list_img" src="./imgs/what i love/coffee.jpg" alt="">
-                  <p class = "list_text"> KeyWord <br> 열정, 성실, 끈기, 차분함, 의지</p>
+                  <img class = "list_img" src="./img/2.png" alt="">
+                  <p class = "list_text"> Skill Proficiency 85%</p>
               </div>
 
               <div class="lists">
-                  <img class = "list_img" src="./imgs/what i love/walking.jpg" alt="">
-                  <p class = "list_text"> SKILLS</p>
+                  <img class = "list_img" src="./img/3.png" alt="">
+                  <p class = "list_text"> Skill Proficiency 70%</p>
               </div>
 
               <div class="lists">
-                  <img class = "list_img" src="./imgs/what i love/traveling.jpg" alt="">
-                  <p class = "list_text"> 기술스택</p>
+                  <img class = "list_img" src="./img/4.png" alt="">
+                  <p class = "list_text">  How to contact Me? </p>
               </div>
           </div>
       </div>
   </div>
 
   <div class="list">
-      <div class = "four">
-          <img class = "contact_img" src ="./imgs/bg.jpg">
+      <div class = "four" id="contact">
+          <img class = "contact_img" src ="./img/5.png">
           <a href="https://www.youtube.com/@mi_ya__01" class="ct">Youtube</a>
           <a href="mailto:kyoungsjjj0513@gmail.com" class="ct">Gmail</a>
           <a href="https://github.com/kyoungsjjj0211" class="ct">Github</a>
