--- a/track002_web_basic/web007_7_array_object.html
+++ b/track002_web_basic/web007_7_array_object.html
@@ -152,8 +152,22 @@
                          평균 99.67
             </pre>
             <script>
- 
+              console.log("ex.1 Car")
+              let car1 = {name : 'BMW',color : 'RED',year :2026}; //객체의 속성을 다 알때 한번에 정리해야할때
+              console.log(car1);
+              let car2 = {}; //중간중간에 생각나서 추가할때 수정에 원활함
+              car2.name='BMW'; car2.color='WHITH'; car2.year=2027; car2.door=2;
+              console.log(car2);
+              //차이름(name), 차색상(color), 년식(year)
 
+              console.log("ex.2 Score")
+              let score = {kor:100, eng:100, math:99};
+              let total = score.kor + score.eng + score.math;
+              let avg =total/3;
+              console.log('총점 :' + total);
+              console.log('평균 :' + avg);
+
+              //(),{}
             </script>
         </div>
     </div><!-- end container  -->
